<resources>
    <!--<string name="app_name">Graduation Rehearsal</string>-->
    <string name="app_name">ระบบทะเบียนบัณฑิต</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tv_lbl_usr">ชื่อผู้ใช้ :</string>
    <string name="tv_lbl_pwd">รหัสผ่าน :</string>
    <string name="et_hint_usr">ชื่อผู้ใช้</string>
    <string name="et_hint_pwd">รหัสผ่าน</string>
    <string name="btn_login">เข้าสู่ระบบ</string>
    <string name="str_loading">Loading</string>
    <string name="place_menu">สถานที่ซ้อม</string>
    <string name="scan_qr_menu">แสกน QR Code</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="show_scan_qr_menu">แสดง QR Code</string>
    <string name="btn_go_login">เข้าสู่ระบบ</string>
    <string name="btn_news">ดูข่าวสาร</string>


    <string name="tv_place">สถานที่ : </string>
    <string name="tv_date_time">วัน เวลา :</string>
</resources>
