<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#CCC"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/li_main"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/app_name"
            android:layout_marginTop="0dp"
            android:paddingTop="10dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:background="@color/bootstrap_brand_primary"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_lbl_usr"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/tv_lbl_usr"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_usr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/et_hint_usr"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_lbl_pwd"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/tv_lbl_pwd"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/et_hint_pwd"
                android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_login"
                android:backgroundTint="@color/bootstrap_brand_success"
                android:text="@string/btn_login"
                android:textColor="#FFF"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_news"
                android:backgroundTint="@color/bootstrap_brand_info"
                android:text="@string/btn_news"
                android:textColor="#FFF"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>